--- a/cakes.html
+++ b/cakes.html
@@ -75,7 +75,9 @@
       <section id="cakes" class="mb-16">
         <div class="max-w-[1300px] mx-auto">
           <div class="flex justify-center">
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-10">
+            <div
+              class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-10"
+            >
               <!-- Pound Cake -->
               <div
                 class="bg-rose-200/50 rounded-2xl p-4 shadow-md hover:shadow-xl transition w-60 h-100"
